--- a/index.html
+++ b/index.html
@@ -290,10 +290,10 @@
 
                                                         <p style="text-align:center"><img alt="" src="./عالم الصحة _ ماذا تفعل إذا سقطت الرؤية والتهاب العين وتألمها؟_files/img3 - ru.png" style="max-width:600px; width:100%">
                                                         </p>
-                                                        <h1>لماذا النظارات والعدسات سيئة؟</h1>
-                                                        <p><strong>- اتضح أن النظارات والعدسات تضر أكثر مما تنفع؟ لكن الكثير من الناس يرتدونها لسنوات ويشعرون بالرضا.</strong></p>
-                                                        <p> يبدو لهم أن كل شيء على ما يرام ، لأنك أثناء ارتداء النظارات ، لا تلاحظ مدى سوء الرؤية. النظارات هي عكازات ستضطر إلى ارتدائها مدى الحياة ، مما يزيد من مشاكل الرؤية مع  مرور الوقت. </p>
-                                                        <p>لذلك ، بعد سنوات عديدة من إرتداء النظارات أو العدسات ، بدلًا من التخلص من مشاكل إجهاد العين و ودعم صحة العين وتحسين حدة البصر  ، تصبح مفاجأة لك انه لم تتخلص من كل هذه المشاكل  في لحظة ما ، ولم تعد قادرًا على الرؤية جيداً!</p>
+                                                        <div style="text-align: center;">
+                                                            <img style= "border-radius: 10px; max-width: 100%;" src="img/girl.jpg" alt="">
+                                                        </div>
+
                                                         </p><h1>كيف تتخلص من مشاكل  إجهاد العين ، والحفاظ على الرؤية الطبيعية  ودعم صحة العين ؟</h1>
                                                       
                                                         <p>. هذا ليس بالأمر الصعب ، لكنه يتطلب الصبر و الإلتزام . لكن الأمر يستحق ذلك وسيؤتي ثماره بعد  عدة مرات.</p>
@@ -746,7 +746,7 @@
                                                                                     </a>
                                                                                 </div>
                                                                                 <div class="b-comments__item-text">
-                                                                                    <p>لقد إستخدمته لفترة طويلى بالفعل و الأن هذا أفضل منتج طلبته في حياتي و هذه صور العبوة لدي .
+                                                                                    <p>لقد إستخدمته لفترة طويلة بالفعل و الأن هذا أفضل منتج طلبته في حياتي و هذه صور العبوة لدي .
                                                                                     </p>
                                                                                     <img style="border-radius: 20px; max-width: 100%; width: 400px;" src="img/ttt.jpg" alt="">
                                                                                 </div>
